# genjiko

./: README.md  pyproject.toml
notebooks/: Bell Number.ipynb  Genjiko Table.ipynb  Genjiko.ipynb
src/: genjiko.py
tests/: test_genjiko.py
